objects/TW1_Shopping__c.object
<CustomObject>
    <fields>
        <fullName>DDD__c</fullName>
        <label>DDD</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Area_Construida__c</fullName>
        <label>Área Construída</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Atendimento_Comercial__c</fullName>
        <label>Atendimento Comercial</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Atendimento_ao_Publico__c</fullName>
        <label>Atendimento ao Público</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Cidade__c</fullName>
        <label>Cidade</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Como_Chegar__c</fullName>
        <label>Como Chegar</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_DDI__c</fullName>
        <label>DDI</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>DF</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MG</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>RJ</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>RR</fullName>
                </value>
                <value>
                    <fullName>RS</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>TO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Fotos__c</fullName>
        <label>Fotos</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TW1_Grupo_Empreendimento__c</fullName>
        <label>Grupo Empreendimento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Id_Externo_VS__c</fullName>
        <externalId>true</externalId>
        <label>Id Externo VS</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TW1_Imagem_Fachada__c</fullName>
        <label>Imagem Fachada</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TW1_Imagem_Logo__c</fullName>
        <label>Imagem Logotipo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TW1_Metragem__c</fullName>
        <label>Metragem (m²)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Regional__c</fullName>
        <label>Regional</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regional Centro Oeste/ Norte</fullName>
                </value>
                <value>
                    <fullName>Regional Nordeste</fullName>
                </value>
                <value>
                    <fullName>Regional Rio</fullName>
                </value>
                <value>
                    <fullName>Regional São Paulo</fullName>
                </value>
                <value>
                    <fullName>Regional Sul</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_SGL_Empreendimento__c</fullName>
        <externalId>true</externalId>
        <label>SGL Empreendimento</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Telefone__c</fullName>
        <label>Telefone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TW1_Trabalhe_Conosco__c</fullName>
        <label>Trabalhe Conosco</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_URL_Site__c</fullName>
        <label>URL Site</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    
    <label>Shopping</label>
    <listViews>
        <fullName>TW1_Todos_os_Shoppings_ListView</fullName>
        <columns>NAME</columns>
        <columns>TW1_Cidade__c</columns>
        <columns>TW1_Estado__c</columns>
        <columns>TW1_Regional__c</columns>
        <columns>TW1_SGL_Empreendimento__c</columns>
        <columns>TW1_Grupo_Empreendimento__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos os Shoppings</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Nome do Empreendimento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shoppings</pluralLabel>
    <recordTypes>
        <fullName>TW1_Condominio</fullName>
        <active>false</active>
        <label>Condomínio</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Fundo</fullName>
        <active>false</active>
        <label>Fundo</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>